--- a/dashboard_afterlogin.html
+++ b/dashboard_afterlogin.html
@@ -22,6 +22,7 @@
 
         <!-- Nav Links (My Investments, Notifications, Settings) -->
         <div class="nav-links">
+          <a href="index.html">Home</a>
           <a href="my_investments.html">My Investments</a>
           <a href="#" id="notifications-link">Notifications</a>
           <a href="#" id="settings-link">Settings</a>
