--- a/index.html
+++ b/index.html
@@ -65,6 +65,76 @@
       </div>
     </section>
 
+    <!-- Investor List Container -->
+  <div class="investor-list-container">
+    <!-- Scrolling Wrapper -->
+    <div class="scrolling-wrapper" id="scrolling-wrapper">
+      <!-- Investor Cards -->
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="Sarah Thompson">
+        <div class="investor-name">Sarah Thompson</div>
+        <div class="investor-role">CEO, Tech Ventures</div>
+        <div class="investor-description">Passionate about disruptive tech and startups.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="James Chen">
+        <div class="investor-name">James Chen</div>
+        <div class="investor-role">Angel Investor</div>
+        <div class="investor-description">Focused on early-stage investments in AI.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="Maria Garcia">
+        <div class="investor-name">Maria Garcia</div>
+        <div class="investor-role">Managing Partner, VC Firm</div>
+        <div class="investor-description">Specializes in fintech and healthcare tech.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="Michael Patel">
+        <div class="investor-name">Michael Patel</div>
+        <div class="investor-role">Venture Partner</div>
+        <div class="investor-description">Strong interest in renewable energy solutions.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="Linda Wang">
+        <div class="investor-name">Linda Wang</div>
+        <div class="investor-role">Serial Entrepreneur</div>
+        <div class="investor-description">Has founded multiple tech startups.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="Robert Kim">
+        <div class="investor-name">Robert Kim</div>
+        <div class="investor-role">Founder, Green Fund</div>
+        <div class="investor-description">Focuses on eco-friendly investments.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="Jessica Lopez">
+        <div class="investor-name">Jessica Lopez</div>
+        <div class="investor-role">Angel Investor</div>
+        <div class="investor-description">Expert in SaaS and digital transformation.</div>
+      </div>
+
+      <div class="investor-card">
+        <img src="https://via.placeholder.com/100" alt="David Singh">
+        <div class="investor-name">David Singh</div>
+        <div class="investor-role">Investment Advisor</div>
+        <div class="investor-description">Specializes in blockchain technology.</div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // JavaScript to duplicate content for a seamless loop
+    const scrollingWrapper = document.getElementById("scrolling-wrapper");
+    scrollingWrapper.innerHTML += scrollingWrapper.innerHTML; // Duplicate content
+  </script>
+
+
     <!-- Testimonials/Success Stories Section -->
     <section class="testimonials">
       <h2>Success Stories</h2>
