--- a/my_investments.html
+++ b/my_investments.html
@@ -23,6 +23,7 @@
         <!-- Nav Links (My Investments, Notifications, Settings) -->
         <!-- Navbar links (add the "My Investments" link) -->
         <div class="nav-links">
+          <a href="index.html">Home</a>
           <a href="#" >My Investments</a>
           <a href="#" id="notifications-link">Notifications</a>
           <a href="#">Settings</a>
@@ -84,7 +85,8 @@
         <p>Status: Growth Stage</p>
     </div><a href="dashboard_afterlogin.html">
     <button id="close-investments-btn" class="cta-btn">Close Investments</button>
-    </a>
+    <!-- <button id="close-investments-btn" class="cta-btn">Upload Idea</button> -->
+  </a>
     </div>
   
     <div id="popup" class="popup-overlay">
