--- a/user_profile.html
+++ b/user_profile.html
@@ -22,8 +22,9 @@
 
         <!-- Nav Links (My Investments, Notifications, Settings) -->
         <div class="nav-links">
-          <a href="my_investments.html">My Ideas</a>
-          <a href="investors.html">Investorss;</a>
+          <a href="index.html">Home</a>
+          <a href="my_ideas.html">My Ideas</a>
+          <a href="investors.html">Investors</a>
           <a href="#" id="notifications-link">Notifications</a>
           <a href="#" id="settings-link">Settings</a>
         </div>
@@ -254,6 +255,6 @@
         </div>
     </div>
 
-    <script src="dashboard_afterlogin.js"></script>
+    <script src="user_profile.js"></script>
   </body>
 </html>
